fix(): Bump base black in dark mode.

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -42,7 +42,7 @@
 
 :root [data-theme="dark"] {
   color-scheme: dark;
-  --background: 240 10% 3.9%;
+  --background: 240 10% 7.9%;
   --foreground: 0 0% 98%;
 
   --card: 240 10% 3.9%;
